--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "labecommerce-backend",
   "main": "index.js",
   "scripts": {
-    "start": "clear && tsc && node ./build/index.js"
+    "start": "clear && tsc && node ./build/index.js",
+    "dev": "ts-node-dev src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,14 @@
   },
   "homepage": "https://github.com/alinekabbas/labecommerce-backend#readme",
   "devDependencies": {
-    "typescript": "^4.9.4",
-    "@types/node":"^18.11.18"
-
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
